src/transformer/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transformer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transformer
  template:
    metadata:
      labels:
        app: transformer
    spec:
      serviceAccountName: default
      containers:
        - image: <REGISTRY>/<NAME>:<TAG>
          name: transformer
          imagePullPolicy: Always
