src/transformer/deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: transformer
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: transformer
  type: ClusterIP
